2006-11-10  Kenichi Handa  <handa@m17n.org>

	* files.el (revert-buffer): Fix previous change.

2006-11-09  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs--redisplay): Fix typo in docstring.
	(bs--window-config-coming-from): Make frame-local.
	(bs--restore-window-config): New function.
	(bs-kill, bs-select, bs-select-other-window)
	(bs-select-other-frame): Use it.
	(bs--window-for-buffer): Return as soon as a matching buffer is found.
	(bs--show-with-configuration): Save the window configuration as a
	frame local var, and only if *buffer-selection* is not already
	visible on this frame.

2006-11-08  Chong Yidong  <cyd@stupidchicken.com>

	* vc-svn.el (vc-svn-admin-directory): New var.
	(vc-svn-registered, vc-svn-responsible-p)
	(vc-svn-repository-hostname): Use it.
	Suggested by arit93@yahoo.com.

2006-11-08  Juanma Barranquero  <lekktu@gmail.com>

	* ldefs-boot.el: Regenerate.

2006-11-08  Alan Mackenzie  <acm@muc.de>

	* emacs-lisp/lisp.el (beginning-of-defun-raw): Code up the
	case (eq open-paren-in-column-0-is-defun-start nil) by searching
	for least nested open-paren.

2006-11-08  Romain Francoise  <romain@orebokech.com>

	* subr.el (remove-overlays): Fix typo in last change.

2006-11-08  Richard Stallman  <rms@gnu.org>

	* subr.el (remove-overlays): Call overlay-recenter.

2006-11-08  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* printing.el (pr-alist-custom-set, pr-ps-utility-custom-set)
	(pr-ps-name-custom-set, pr-txt-name-custom-set): Return back the old
	behaviour.
	(pr-menu-bind): Act on global-map instead of menu-bar-file-menu
	directly.

2006-11-08  Juanma Barranquero  <lekktu@gmail.com>

	* ido.el (ido-ignore-extensions, ido-show-dot-for-dired)
	(ido-max-dir-file-cache, ido-decorations)
	(ido-rewrite-file-prompt-functions, ido-use-mycompletion-depth)
	(ido-magic-backward-char, ido-enter-dired)
	(ido-enter-insert-buffer, ido-enter-insert-file, ido-dired)
	(ido-list-directory, ido-first-match, ido-only-match)